examples/ok/lower_never_ok.hax
module Demo;

pub sub boom() -> Void {
  panic("no");
}
