examples/fail/int_cast_bad_arg.hax
module IntCastBadArg;

pub sub demo() -> int32 {
  return int32("nope");
}
